Fix Hungarian flag bad cropping

--- a/dolweb/static/sprites/nav.css
+++ b/dolweb/static/sprites/nav.css
@@ -1,4 +1,4 @@
-/* glue: 0.3 hash: 6247b5affd */
+/* glue: 0.3 hash: 2039709b3b */
 .sprite-nav-logo-small,
 .sprite-nav-tr,
 .sprite-nav-sv,
@@ -24,7 +24,7 @@
 .sprite-nav-nl{background-position:-30px -45px;width:30px;height:20px;}
 .sprite-nav-ko{background-position:-72px 0px;width:30px;height:20px;}
 .sprite-nav-ja{background-position:-72px -20px;width:30px;height:20px;}
-.sprite-nav-hu{background-position:-72px -40px;width:30px;height:21px;}
+.sprite-nav-hu{background-position:-72px -40px;width:30px;height:20px;}
 .sprite-nav-fr{background-position:0px -65px;width:30px;height:20px;}
 .sprite-nav-fa{background-position:-30px -65px;width:30px;height:20px;}
 .sprite-nav-es{background-position:-60px -65px;width:30px;height:20px;}
